cmake_minimum_required(VERSION 3.13)  
project(Playground)               
set(CMAKE_CXX_STANDARD 20)      

add_subdirectory(Move)
add_subdirectory(Copy)
add_subdirectory(Templates)
add_subdirectory(FunctionPointers)
add_subdirectory(LinkedList)
add_subdirectory(Pointers)
add_subdirectory(Lambdas)
add_subdirectory(SmartPointers)
add_subdirectory(Misc)
