add_executable(template template.cpp)
add_executable(crtp CRTP.cpp)
add_executable(templateClasses templateClasses.cpp)
add_executable(templateSpecialization templateSpecialization.cpp)
add_executable(partialTemplateSpecialization partialTemplateSpecialization.cpp)
add_executable(variadicTemplates variadicTemplates.cpp)
